# P.I.C.O

./: .gitignore  Dockerfile  pyproject.toml
app/: main.py
app/agents/: orchestrator.py  req.txt  routing_arch_agent.py
app/api/routes/: ai_routes.py  db_routes.py  health_check.py
app/core/: config.py  events.py  logger.py
app/db/: helpers.py  session.py  utils.py
app/services/ai_services/: agents.py  ai_agents.py  ai_ocr.py  ai_radiologist.py  ensemble_ocr.py  gemini_services.py  helpers.py  image_segmentation_service.py  ocr.py  resources.py
app/services/gcp_services/: helpers.py
prompts/: agents_prompts.py  system_prompts.py
